Alignment Fix

--- a/css/style.css
+++ b/css/style.css
@@ -1907,15 +1907,20 @@ General Class
       font-weight: 400;
       padding-top: 10px; }
 
-/*======================================== Resume =============================*/
 /*----------------------------------------*/
-/*  11. Header Area
+/*  11. Service Area
 /*----------------------------------------*/
+.service-box {
+  margin-bottom: 34px; }
+
 /*================================ Portfolio Section ====================================*/
 /*================================ Blog Section ====================================*/
 /*----------------------------------------*/
 /*  12. Contact Area
 /*----------------------------------------*/
+.contact-area {
+  padding-top: 25px; }
+
 .contact-details h4 {
   font-size: 20px;
   font-family: "Josefin Sans", sans-serif;
