--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,6 +1,9 @@
 /*----------------------------------------*/
 /*  12. Contact Area
 /*----------------------------------------*/
+.contact-area{
+   padding-top: 25px;
+}
 .contact-details{
    h4{
       font-size: 20px;
