--- a/sass/_service.scss
+++ b/sass/_service.scss
@@ -1,6 +1,10 @@
-/*======================================== Resume =============================*/
 /*----------------------------------------*/
-/*  11. Header Area
+/*  11. Service Area
 /*----------------------------------------*/
-
+// .service-area{
+//    padding-top: 25px;
+// }
+.service-box{
+   margin-bottom: 34px;
+}
 
